# messengerstats-ng

./: .gitignore  CMakeLists.txt  MessengerStatsNG_en_GB.ts  README.md  resources.qrc  version.h.in
.github/: FUNDING.yml
classifiers/: README.md  nickname_en.txt  system_en.txt
include/model/: common.h  message.h  messengerdata.h  thread.h
include/view/: conversationlistitem.h  conversationspage.h  mainwindow.h  personinformationdialog.h  preferencesdialog.h  settings.h  themeservice.h  threadpage.h
include/view/gallery/: audiogalleryitem.h  gallerywidget.h  imagegalleryitem.h  videogalleryitem.h
include/view/message/: messageinformationdialog.h
include/view/statistics/: statisticprovider.h  statisticsviewer.h
include/view/statistics/impl/: barchart.h  basic.h  chart.h  messages.h  piechart.h
include/view/thread/: messageitemdelegate.h  nicknameitem.h  searchdialog.h  threadinformationdialog.h  threadlistmodel.h
include/view/thread/renderers/: callmessagerenderer.h  centeredmessagerenderer.h  fallbackmessagerenderer.h  genericmessagerenderer.h  imessagerenderer.h
src/: main.cpp
src/model/: common.cpp  message.cpp  messengerdata.cpp  thread.cpp
src/view/: conversationlistitem.cpp  conversationlistitem.ui  conversationspage.cpp  conversationspage.ui  mainwindow.cpp  mainwindow.ui  personinformationdialog.cpp  personinformationdialog.ui  preferencesdialog.cpp  preferencesdialog.ui  themeservice.cpp  threadpage.cpp  threadpage.ui
src/view/gallery/: audiogalleryitem.cpp  audiogalleryitem.ui  gallerywidget.cpp  gallerywidget.ui  imagegalleryitem.cpp  imagegalleryitem.ui  videogalleryitem.cpp  videogalleryitem.ui
src/view/message/: messageinformationdialog.cpp  messageinformationdialog.ui
src/view/statistics/: statisticprovider.cpp  statisticsviewer.cpp  statisticsviewer.ui
src/view/statistics/impl/: barchart.cpp  chart.cpp  messages.cpp  piechart.cpp
src/view/thread/: messageitemdelegate.cpp  nicknameitem.cpp  nicknameitem.ui  searchdialog.cpp  searchdialog.ui  threadinformationdialog.cpp  threadinformationdialog.ui  threadlistmodel.cpp
src/view/thread/renderers/: callmessagerenderer.cpp  centeredmessagerenderer.cpp  fallbackmessagerenderer.cpp  genericmessagerenderer.cpp
win/: MessengerStatsNG.exe.manifest  icons.rc  version.rc.in
